--- a/index.html
+++ b/index.html
@@ -3,17 +3,19 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="src/assets/kwaski.png" />
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="Calculate returns on Bangladesh NRB Bonds - Wage Earner Development Bond (WEDB), US Dollar Investment Bond (USDIB), and US Dollar Premium Bond (USDPB)" />
+  <meta name="keywords" content="NRB Bond, Bangladesh, Diaspora Bond, WEDB, USDIB, USDPB, Wage Earner, Investment, Calculator" />
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
-    href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;300;400;500;700;900&family=Noto+Serif+JP:wght@200;300;400;500;600;700;900&display=swap"
+    href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
     rel="stylesheet" />
-  <title>Kwaski Tech</title>
+  <title>NRB Bond Calculator | Bangladesh Diaspora Bond Investment Calculator</title>
 </head>
 
-<body id="body">
+<body id="body" class="antialiased">
   <div id="root"></div>
   <script type="module" src="/src/main.tsx"></script>
 </body>
