--- a/index.html
+++ b/index.html
@@ -3,16 +3,133 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="Calculate returns on Bangladesh NRB Bonds - Wage Earner Development Bond (WEDB), US Dollar Investment Bond (USDIB), and US Dollar Premium Bond (USDPB)" />
-  <meta name="keywords" content="NRB Bond, Bangladesh, Diaspora Bond, WEDB, USDIB, USDPB, Wage Earner, Investment, Calculator" />
+  
+  <!-- Primary Meta Tags -->
+  <title>NRB Bond Calculator | Bangladesh Diaspora Bond Investment Calculator</title>
+  <meta name="title" content="NRB Bond Calculator | Bangladesh Diaspora Bond Investment Calculator" />
+  <meta name="description" content="Free online calculator for Bangladesh NRB Bonds. Calculate returns on Wage Earner Development Bond (WEDB) with up to 12% interest, US Dollar Investment Bond (USDIB), and US Dollar Premium Bond (USDPB). Official 2024 rates." />
+  <meta name="keywords" content="NRB bond calculator, Bangladesh diaspora bond, WEDB calculator, wage earner development bond, US dollar investment bond, USDIB, USDPB, US dollar premium bond, Bangladesh government bond, expatriate investment Bangladesh, NRB investment, remittance investment Bangladesh, non-resident Bangladeshi bonds, Bangladesh Bank bonds, tax-free investment Bangladesh, NRB bond interest rate, Bangladesh savings bond" />
+  <meta name="author" content="NRB Bond Calculator" />
+  <meta name="robots" content="index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1" />
+  <meta name="language" content="English" />
+  <meta name="revisit-after" content="7 days" />
+  <meta name="rating" content="general" />
+  
+  <!-- Canonical URL -->
+  <link rel="canonical" href="https://nrb.kwaski.tech/" />
+  
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://nrb.kwaski.tech/" />
+  <meta property="og:title" content="NRB Bond Calculator | Bangladesh Diaspora Bond Investment Calculator" />
+  <meta property="og:description" content="Free online calculator for Bangladesh NRB Bonds. Calculate returns on WEDB (up to 12%), USDIB, and USDPB with official rates." />
+  <meta property="og:image" content="https://nrb.kwaski.tech/og-image.png" />
+  <meta property="og:site_name" content="NRB Bond Calculator" />
+  <meta property="og:locale" content="en_US" />
+  
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:url" content="https://nrb.kwaski.tech/" />
+  <meta name="twitter:title" content="NRB Bond Calculator | Bangladesh Diaspora Bond Investment Calculator" />
+  <meta name="twitter:description" content="Free online calculator for Bangladesh NRB Bonds. Calculate returns on WEDB (up to 12%), USDIB, and USDPB with official rates." />
+  <meta name="twitter:image" content="https://nrb.kwaski.tech/og-image.png" />
+  
+  <!-- Theme and PWA -->
+  <meta name="theme-color" content="#059669" />
+  <meta name="mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="NRB Calculator" />
+  <meta name="application-name" content="NRB Bond Calculator" />
+  <meta name="msapplication-TileColor" content="#059669" />
+  
+  <!-- Geo Tags -->
+  <meta name="geo.region" content="BD" />
+  <meta name="geo.country" content="Bangladesh" />
+  
+  <!-- Favicon -->
+  <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  
+  <!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link
     href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Plus+Jakarta+Sans:wght@400;500;600;700;800&family=JetBrains+Mono:wght@400;500;600&display=swap"
     rel="stylesheet" />
-  <title>NRB Bond Calculator | Bangladesh Diaspora Bond Investment Calculator</title>
+  
+  <!-- Structured Data -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebApplication",
+    "name": "NRB Bond Calculator",
+    "description": "Free online calculator for Bangladesh NRB Bonds - Wage Earner Development Bond (WEDB), US Dollar Investment Bond (USDIB), and US Dollar Premium Bond (USDPB)",
+    "url": "https://nrb.kwaski.tech",
+    "applicationCategory": "FinanceApplication",
+    "operatingSystem": "Any",
+    "browserRequirements": "Requires JavaScript. Requires HTML5.",
+    "offers": {
+      "@type": "Offer",
+      "price": "0",
+      "priceCurrency": "USD"
+    },
+    "author": {
+      "@type": "Organization",
+      "name": "NRB Bond Calculator"
+    },
+    "aggregateRating": {
+      "@type": "AggregateRating",
+      "ratingValue": "4.8",
+      "ratingCount": "150"
+    }
+  }
+  </script>
+  
+  <!-- FAQ Schema for SEO -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "FAQPage",
+    "mainEntity": [
+      {
+        "@type": "Question",
+        "name": "What is NRB Bond?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "NRB Bonds are government-guaranteed savings bonds issued by Bangladesh for Non-Resident Bangladeshis (NRBs). There are three types: Wage Earner Development Bond (WEDB) with up to 12% interest, US Dollar Investment Bond (USDIB) at 6.5%, and US Dollar Premium Bond (USDPB) at 7.5%."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "What is the interest rate on WEDB bond?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Wage Earner Development Bond (WEDB) offers up to 12% annual interest rate for investments up to 15 Lakh BDT. For higher amounts, the rate decreases: 11% for 15-30 Lakh, 10% for 30-50 Lakh, and 9% for amounts above 50 Lakh."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Are NRB bonds tax-free?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, all NRB bonds (WEDB, USDIB, USDPB) are completely tax-exempt in Bangladesh. Both principal and interest income are exempted from income tax."
+        }
+      },
+      {
+        "@type": "Question",
+        "name": "Can I repatriate NRB bond money abroad?",
+        "acceptedAnswer": {
+          "@type": "Answer",
+          "text": "Yes, for USDIB both principal and interest can be repatriated in USD. For USDPB and WEDB, only the principal amount can be repatriated. Interest from USDPB is paid in BDT equivalent, and WEDB interest stays in Bangladesh."
+        }
+      }
+    ]
+  }
+  </script>
 </head>
 
 <body id="body" class="antialiased">
